--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>This is app component</h1>
+<!--<h1>This is app component</h1> -->
 
-<app-parent></app-parent>
+<!--<app-parent></app-parent> -->
+<!-- <app-login></app-login> -->
+
+<router-outlet></router-outlet>
