--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="login-card">
 
         <h1>Welcome to Friendr</h1>
-        <div>Sign in to your account</div>
+        <div class="sign1">Sign in to your account</div>
 
         <input type="text" placeholder="Enter your username" [(ngModel)]="username"/>
 
